# ossummit-asset-tracker

./: README.md  west.yml
app/: CMakeLists.txt  Kconfig  debug.conf  prj.conf  trace.conf
app/src/: gps.c  gps.h  lte.c  lte.h  main.c  payload.c  payload.h  thingsboard.c  thingsboard.h
